navbar overlap fixed everywhere and jshowing the activities inside index is in progress

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -15,6 +15,6 @@ a {
   display: flex;
 }
 
-.index {
-  margin-top: 60px;
+body {
+  padding-top: 65px;
 }
